--- a/site-web_test/intro.html
+++ b/site-web_test/intro.html
@@ -9,7 +9,7 @@
         <div class="div1">
             <h1>La Formation ABC DEV</h1>
             <img src="windows10.gif" alt="un fond windows">
-            <p class="p1"><strong>Un site capsule des cours d'ABC DEV</strong></p>
+            <p class="p1">Un site capsule des cours d'ABC DEV</p>
             <p class="p2">[coder par des developpeur de talents]</p>
             <p>Au début de la Formation nous avons vues plusieurs points plus ou moins important.</p>
             <p>[Notement]</p>
