--- a/site-web_test/intro.html
+++ b/site-web_test/intro.html
@@ -18,7 +18,7 @@
                 <li>La numération</li>
                 <li><mark>Visual code en travail autonome</mark></li>
             </ul>
-            <p>Mais le gros point de début de formation est très rythmer par GitHub.</p>
+            <p>Mais le gros point de début de formation est très rythmé par GitHub.</p>
             <p>La numération est un point très important à prendre en compte!!</p>
             <p>Visual est un très bon outils pour apprendre le language HTML et CSS!</p>
             <p><mark>à noter que le travail sur visual code est a faire en autonomie</mark></p>
