cours d'anglais fait et bouton

--- a/site-web_test/anglais.html
+++ b/site-web_test/anglais.html
@@ -5,3 +5,25 @@
         <meta charset="utf8">
         <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <h1>Cours d'Anglais sur fiches</h1>
+        <p>A day in the life</p>
+        <p>The world of work</p>
+        <p><em>1er EXRCICE</em></p>
+        <p>Name: My name is Marta Edberg.</p>
+        <p>Contry: I'm from Sweden.</p>
+        <p>Home town: I'm live in Solma</p>
+        <p>Relationship status: I'm married</p>
+        <p>Job: I'm/an a airport manager</p>
+        <p>Company: I work for Stockholm Airport</p>
+        <P>Travel: Yes she's travel for work</P>
+        <p><em>2ème EXERCICES</em></p>
+        <ol>
+            <li>Where : do you from?</li>
+            <li>Where : do you live?</li>
+            <li>Are you : married or single?</li>
+            <li>What : do you do?</li>
+            <li>Which company : do you work for?</li>
+            <li>Do you travel : for you work</li>
+        </ol>
+    </body>
