--- a/site-web_test/intro.html
+++ b/site-web_test/intro.html
@@ -28,7 +28,7 @@
                 <li class="menu-html"><a href="numeration.html">Numération</a></li>
                 <li class="github-html"><a href="github.html">GitHub</a></li>
                 <li class="anglais-html"><a href="anglais.html">Anglais</a></li>
-                <li class="cum-html"><a href="communication.html">Communication</a></li>
+                <li class="com-html"><a href="communication.html">Communication</a></li>
             </ul>
         </nav>
         <div class="div2">
