refont cmplete ok

--- a/ABC-DEV-site/anglais.html
+++ b/ABC-DEV-site/anglais.html
@@ -3,7 +3,7 @@
     <head>
         <title>Menu simple</title>
         <meta charset="utf8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Cours d'Anglais sur fiches</h1>
