--- a/ABC-DEV-site/numeration.html
+++ b/ABC-DEV-site/numeration.html
@@ -3,5 +3,5 @@
     <head>
         <title>Menu simple</title>
         <meta charset="utf8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
