--- a/ABC-DEV-site/anglais.html
+++ b/ABC-DEV-site/anglais.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menu simple</title>
+        <title>Cours d'anglais</title>
         <meta charset="utf8">
         <link rel="stylesheet" href="styles.css">
     </head>
