mise en page de anglais

--- a/ABC-DEV-site/anglais.html
+++ b/ABC-DEV-site/anglais.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Cours d'Anglais sur fiches</h1>
+    <div class="tp-html">
+        <h1><mark>Cours d'Anglais sur fiches</mark></h1>
         <p>A day in the life</p>
         <p>The world of work</p>
-        <p><em>1er EXRCICE</em></p>
+        <p><mark>1er EXRCICE :</mark></p>
         <p>Name: My name is Marta Edberg.</p>
         <p>Contry: I'm from Sweden.</p>
         <p>Home town: I'm live in Solma</p>
@@ -17,13 +18,14 @@
         <p>Job: I'm/an a airport manager</p>
         <p>Company: I work for Stockholm Airport</p>
         <P>Travel: Yes she's travel for work</P>
-        <p><em>2ème EXERCICES</em></p>
-        <ol>
+        <p><mark>2ème EXERCICES :</mark></p>
+        <ol type="1">
             <li>Where : do you from?</li>
             <li>Where : do you live?</li>
             <li>Are you : married or single?</li>
             <li>What : do you do?</li>
             <li>Which company : do you work for?</li>
             <li>Do you travel : for you work</li>
+    </div>
         </ol>
     </body>
