j'ai quasiment terminer l'anglais

--- a/ABC-DEV-site/anglais.html
+++ b/ABC-DEV-site/anglais.html
@@ -8,6 +8,7 @@
     <body>
     <div class="tp-html">
         <h1><mark>Cours d'Anglais sur fiches</mark></h1>
+        <img src="london.gif" alt="c'est londre">
         <p>A day in the life</p>
         <p>The world of work</p>
         <p><mark>1er EXRCICE :</mark></p>
