--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -8,9 +8,24 @@
     <body>
         <nav>
             <ul>
-                <li class="menu-html"><a href="numeration.html">Numération</a></li>
-                <li class="github-html"><a href="github.html">GitHub</a></li>
-                <li class="anglais-html"><a href="anglais.html">Anglais</a></li>
+                <li class="menu-html"><a href="numeration.html">Numération</a>
+                <ul class="submenu">
+                    <li><a href="#">Numération complete</a></li>
+                    <li><a href="#">Compter en binaire</a></li>
+                </ul>
+                </li>
+                <li class="github-html"><a href="github.html">GitHub</a>
+                <ul class="submenu">
+                    <li><a href="#">Cours github</a></li>
+                    <li><a href="#">video github</a></li>
+                </ul>
+                </li>
+                <li class="anglais-html"><a href="anglais.html">Anglais</a>
+                <ul class="submenu">
+                    <li><a href="#">Oral</a></li>
+                    <li><a href="#">Ecrit</a></li>
+                </ul>
+                </li>
                 <li class="com-html"><a href="communication.html">Communication</a></li>
                 <li class="intro-html"><a href="https://arfp.github.io/tp/algo/introduction/" target="_blank">introduction à la numération</a></li>
                 <li class="video-html"><a href="e-veille.pdf" target="_blank">E-veille ton actu</a></li>
