je viens de mettre la synthese

--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -9,7 +9,7 @@
         <nav>
             <ul>
                 <li class="menu-html"><a href="numeration.html">Numération</a></li>
-                <li class="github-html"><a href="github.html">GitHub</a></li>
+                <li class="github-html"><a href="synthese.pdf">GitHub</a></li>
                 <li class="anglais-html"><a href="anglais.html">Anglais</a></li>
                 <li class="com-html"><a href="communication.html">Communication</a></li>
                 <li class="intro-html"><a href="https://arfp.github.io/tp/algo/introduction/" target="_blank">introduction à la numération</a></li>
