--- a/ABC-DEV-site/numeration.html
+++ b/ABC-DEV-site/numeration.html
@@ -5,3 +5,8 @@
         <meta charset="utf8">
         <link rel="stylesheet" href="styles.css">
     </head>
+    <body>
+        <h1>Introduction a la numération</h1>
+        <p>Voir pdf pour plus d'info</p>
+        <p>J'aime trop le BINAIRE CA SE RESSENT LA NON?????!!!!!</p>
+    </body>
