--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -35,5 +35,6 @@
             <p>Visual est un très bon outils pour apprendre le language HTML et CSS!</p>
             <p><mark>à noter que le travail sur visual code est a faire en autonomie</mark></p>
         </div>
+        <script src="java-site.js"></script>
     </body>
 </html>
