--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -35,6 +35,10 @@
             <p>Visual est un très bon outils pour apprendre le language HTML et CSS!</p>
             <p><mark>à noter que le travail sur visual code est a faire en autonomie</mark></p>
         </div>
+        <figure>
+            <figcaption>Ecoute le bruit</figcaption>
+            <audio controls src="bruit.mp3">bruit</audio>
+        </figure>
         <script src="java-site.js"></script>
     </body>
 </html>
