--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -34,25 +34,11 @@
             <p>La numération est un point très important à prendre en compte!!</p>
             <p>Visual est un très bon outils pour apprendre le language HTML et CSS!</p>
             <p><mark>à noter que le travail sur visual code est a faire en autonomie</mark></p>
-        </div>
-        <figure>
+        </div>        <figure>
             <figcaption>Le UwU:</figcaption>
-            <audio controls src="/media/cc0-audio/t-rex-roar.mp3"></audio>
+            <audio controls src="hannah-uwu.mp3"></audio>
             <a href="hannah-uwu.mp3"> UwU </a>
+            <script src="java-site.js"></script>
           </figure>          
-        <form action="">
-            <input name="choix" type="radio" value="0">
-            <input name="choix" type="radio" value="1" checked>
-            <input name="choix" type="radio" value="2">
-        </form>
-        <script>
-            var elts = document.querySelectorAll('input');
-            for (var i = 0; i <elts.length; i++) {
-                if (elts[i].checked) break;
-            }
-            console.log(elts[i].value);
-        </script>
-        <script>alert("Rémi UwU");</script>
-        <script src="java-site.js"></script>
     </body>
 </html>
