commit pour Java cours

--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -10,7 +10,7 @@
             <ul>
                 <li class="menu-html"><a href="numeration.html">Numération</a></li>
                 <li class="github-html"><a href="synthese.pdf">GitHub</a></li>
-                <li class="anglais-html"><a href="anglais.html">Anglais</a></li>
+                <li class="anglais-html"><a href="anglais.html">Cours Java</a></li>
                 <li class="com-html"><a href="communication.html">Communication</a></li>
                 <li class="intro-html"><a href="https://devoldere.net/ressources/algo/Algo%2001%20-%20Numeration%20-%201.0.2%20MD.pdf" target="_blank">introduction à la numération</a></li>
                 <li class="video-html"><a href="e-veille.pdf" target="_blank">E-veille ton actu</a></li>
@@ -34,11 +34,6 @@
             <p>La numération est un point très important à prendre en compte!!</p>
             <p>Visual est un très bon outils pour apprendre le language HTML et CSS!</p>
             <p><mark>à noter que le travail sur visual code est a faire en autonomie</mark></p>
-        </div>        <figure>
-            <figcaption>Le UwU:</figcaption>
-            <audio controls src="hannah-uwu.mp3"></audio>
-            <a href="hannah-uwu.mp3"></a>
-            <script src="java-site.js"></script>
-          </figure>          
+        </div>       
     </body>
 </html>
