--- a/ABC-DEV-site/mas-ter.html
+++ b/ABC-DEV-site/mas-ter.html
@@ -8,7 +8,7 @@
     <body>
         <nav>
             <ul>
-                <li class="menu-html"><a href="numeration.html">Numération</a></li>
+                <li class="menu-html"><a href="numeration.html">Java Exercice</a></li>
                 <li class="github-html"><a href="synthese.pdf">GitHub</a></li>
                 <li class="anglais-html"><a href="anglais.html">Cours Java</a></li>
                 <li class="com-html"><a href="communication.html">Communication</a></li>
