--- a/ABC-DEV-site/numeration.html
+++ b/ABC-DEV-site/numeration.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Numération</title>
+        <title>Java Algorithme Exercices</title>
         <meta charset="utf8">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Introduction a la numération</h1>
-        <p>Voir pdf pour plus d'info</p>
-        <p>J'aime trop le BINAIRE CA SE RESSENT LA NON?????!!!!!</p>
+        <h1>Exercice Java</h1>
     </body>
